Testcontainer's tests for the server Docker distribution were created. Those tests are the implementation of TP feature tests running on Docker image.
Addtional changes:
1. commons-lang dependency was replaced by commons-lang3 because of classpath conflicts with tests containers.
2. The directory for heap dumps was added as the Docker volume.
3. YouTrackDBServerTest.java was removed as it does not have any sense to keep it with those changes.

Side change:
 Deprectated warnings are enabled in IntelliJ code inspections.